k8s/authdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth-service:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5001
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: task-app
spec:
  selector:
    app: auth-service
  ports:
    - port: 5001
