k8s/backdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: backend-api:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /tasks
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /tasks
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: task-app
spec:
  selector:
    app: backend-api
  ports:
    - port: 8000
