k8s/dbdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: task-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: task-app
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
