k8s/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: task-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: task-app
spec:
  selector:
    app: postgres
  ports:
    - port: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: vishnu196/py3tierback:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /tasks
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /tasks
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: task-app
spec:
  selector:
    app: backend-api
  ports:
    - port: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: vishnu196/py3tier:latest
        ports:
        - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: task-app
spec:
  selector:
    app: auth-service
  ports:
    - port: 5001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  namespace: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
      - name: frontend-ui
        image: vishnu196/py3tierfront:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: task-app
spec:
  type: NodePort
  selector:
    app: frontend-ui
  ports:
    - port: 80
      targetPort: 5000
	  nodePort: 30007

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
  namespace: task-app
spec:
  rules:
  - host: task.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
